[tool.poetry]
name = "cteeth-api"
version = "0.1.0"
description = "CTeeth API"
authors = [
    "Matthew Dailey <dailey.matthew@gmail.com>",
    "Preme <premepadcha@gmail.com>",
    "Benjamin Dailey <benjamin.dailey08@gmail.com"]
license = "LICENSE"
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.115.13"
uvicorn = "^0.34.3"

[tool.poetry.scripts]
cteeth-api = "cteeth_api.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
